feat: salvage interrupted thinking and give it a gutter in the transcript
Pressing ESC during an active thinking stretch appended nothing to the
transcript: the body the model had already produced was simply lost.
197 keeps it in a single-slot StreamingThinking cache and, in its cancel
handler, drains that slot into a virtual assistant message when
thinkingStartedAt is non-null. Port that.

InterruptedThinkingCache holds the slot. Its liveness window is 197's
30s, but expiry is evaluated lazily on read instead of from a timer —
the slot has exactly one reader, so the two are observationally
identical, and dropping the timer removes a class of GUI-thread and
cancellation ordering bugs while keeping the window testable without
sleeping. Only the assistant arm writes it (thinking_delta deliberately
does not), matching 197's writer.

LanternaReplScreen already called salvageInterruptedThinking() from its
cancel handler; the sink side landed here, so this also restores the
module to a compiling state. The salvage defers through the delta
batcher so pending deltas flush first, the row lands ahead of the
Interrupted line, and a later truncateLinesTo cannot wipe it. The
message is usually invisible — the common ESC path rewinds past it —
and that is 197's behaviour too, documented on the cache rather than
"fixed".

Alongside: thinking bodies now render with a two-column ∴ gutter on the
first row and aligned continuation rows, replacing the standalone
"∴ Thinking…" header line, and redacted_thinking blocks get the header
treatment instead of rendering as nothing.